bug 223990. Should have a getPrimaryExtensionForType function r=bzbarsky sr=darin also changes nsIMIMEService functions to start with a lowercase letter (only affects JS Callers)